kubernetes/dev/frontend/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: svc-wallettrack-frontend
spec:
  selector:
    app: wallettrack-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
