kubernetes/dev/frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: wallettrack-ingress-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: frontend.dev.k3s-master.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-wallettrack-frontend
                port:
                  number: 80
